# easyUpload-backend

./: .gitignore  README.md  api.py  pyproject.toml
main/api/: api.py
main/api/routers/: products.py
main/models/: product.py
