[tool.poetry]
name = "easyupload"
version = "0.1.0"
description = ""
authors = ["Willy Renzo <willyrenzodemelo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
